--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./a1_32.ico" />
+    <link rel="icon" href="./hts.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Discover a wide range of high-quality used auto parts at A1 Truck & Van Wrecking in East Valley, Arizona. 
-    Our extensive inventory includes reliable replacement components for various makes and models. 
-    Find engines, transmissions, brakes, lights, and more. 
-    Explore eco-friendly and cost-effective solutions for your vehicle needs. 
-    Browse our selection of dependable pre-owned parts today." />
+    <meta name="description" content="Hamilton Tree Service: Premier Tree Removal Specialists in Genesee County, Michigan. 
+    With over a decade of experience, we offer expert tree removal, pruning, trimming, and lot clearing services. 
+    Our dedicated team prioritizes health, beauty, and safety in tree care, ensuring customer satisfaction with personalized solutions. 
+    Trust us for efficient, safe tree care and emergency services" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -26,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>A1 Truck & Van Wrecking</title>
+    <title>Hamilton Tree Service</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
